--- a/manager/templates/base.html.twig
+++ b/manager/templates/base.html.twig
@@ -57,6 +57,7 @@
 
 <main role="main">
     {% block breadcrumbs %}{% endblock %}
+    {% include '_flashes.html.twig' %}
     {% block body %}{% endblock %}
 </main>
 
